2013-05-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl,
	  util/pandora_xml_stress.conf: Added support for data attenuation on
	  certain days.

2013-05-16  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Added information about the loading of the
	  enterprise module to the log.

2013-05-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Added the Pandora FMS's console MIB
	  to snmp* calls.

	* pandora_server_installer,
	  pandora_server.spec,
	  lib/PandoraFMS/Tools.pm,
	  lib/PandoraFMS/Config.pm,
	  Makefile.PL,
	  pandora_server.redhat.spec,
	  DEBIAN/control: Removed PERL's SNMP lib from the deps.

2013-05-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Merged from 4.0 branch. Directly call
	  snmptranslate, since SNMP::translateObj does not seem to load
	  enterprise MIBs.

2013-05-13  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixes crash on inverse resolution for
	GIS information on openstreetmaps. This was due function was moved from
	Dataserver to Core.pm and include for LWP::Simple not :(

2013-05-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Check that inet_aton does not return undef.

2013-05-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Added a function to resolve hostnames.

2013-05-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm,
	  util/pandora_db.pl: Several improvements. Added support for detecting
	  other running instances of the script.

2013-05-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Add a default module_interval.

	* util/pandora_db.pl: Moved data deletion code to a generic function.

2013-04-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Adjusted module counts.

2013-04-24  Sancho Lerena <slerena@artica.es>

        * util/pandora_db.pl: patched the code of tagente_datos purge to have n chunks, 