@@ -1,5 +1,10 @@
 2013-05-20  Ramon Novoa  <rnovoa@artica.es>
 
+	* util/pandora_xml_stress.pl: Added support for strictly incremental
+	  modules.
+
+2013-05-20  Ramon Novoa  <rnovoa@artica.es>
+
 	* util/pandora_xml_stress.pl,
 	  util/pandora_xml_stress.conf: Added support for data attenuation on
 	  certain days.
